# PLMTune

./: .gitignore  README.md  outputs  pyproject.toml  requirements.txt
data/: data
data/processed/: .gitkeep
data/raw/: .gitkeep
logs/: .gitkeep
plmtune/: pyvenv.cfg
plmtune/Scripts/: activate  activate.bat  jsonpointer  pygrun
scripts/: download_proteingym.py  eval.py  eval.sh  interpret.py  interpret.sh  prepare_proteingym_substitutions_minimal.py  split_by_protein.py  train.py  train.sh
src/idr_vep/: __init__.py
src/idr_vep/data/: vep_dataset.py
src/idr_vep/eval/: __init__.py
src/idr_vep/interp/: __init__.py
src/idr_vep/models/: __init__.py  esm_head.py
src/idr_vep/train/: __init__.py
src/idr_vep/utils/: esm_utils.py
