[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idr-vep"
version = "0.1.0"
description = "Protein language model fine-tuning for intrinsically disordered regions (IDR) and variant effect prediction (VEP)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Katherine Langille", email = "katherine.langille@sickkids.ca"}
]
keywords = ["protein", "machine-learning", "deep-learning", "variant-effect-prediction", "IDR"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.44.0",
    "lightning>=2.4.0",
    "fair-esm",
    "einops>=0.7.0",
    "biopython>=1.81",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "rich>=13.0.0",
    "wandb>=0.15.0",
    "tensorboard>=2.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/Bananagoo/PLMTune"
Repository = "https://github.com/Bananagoo/PLMTune"
Issues = "https://github.com/Bananagoo/PLMTune/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
idr_vep = ["**/*.yaml", "**/*.yml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
